--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,6 +40,7 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: ui-build
+          path: digito-ui/build
       - name: Docker Login
         uses: Azure/docker-login@v1
         with:
