--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -56,8 +56,9 @@ jobs:
       - name: Push branch artefact
         if: github.ref != null
         run: |
-          docker tag "$DOCKER_IMAGE:$GITHUB_SHA" "$DOCKER_IMAGE:$GITHUB_REF"
-          docker push "$DOCKER_IMAGE:$GITHUB_REF"
+          export BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+          docker tag "$DOCKER_IMAGE:$GITHUB_SHA" "$DOCKER_IMAGE:$BRANCH_NAME"
+          docker push "$DOCKER_IMAGE:$BRANCH_NAME"
       - name: Push as current
         if: github.ref == 'master'
         run: |
