--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,44 +3,31 @@ name: Digito API
 on: [push]
 
 jobs:
-  build:
+  build-release:
+    name: Build and Release to DockerHub
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python: [3.7]
-    steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python }}
-    - name: Build app
-      working-directory: digito-api
-      run: |
-        pip install nose2
-        python -m venv --system-site-packages .env
-        source .env/bin/activate
-        pip install -I -r requirements.txt
-        python -m nose2
-    - name: Upload artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: api-env
-        path: digito-api/.env
-  release-docker:
-    runs-on: ubuntu-latest
-    needs: build
     env:
       DOCKER_IMAGE: jtalk/digito-api
       DOCKER_BUILD_TAG: jtalk/digito-api
       DOCKER_REF_TAG: jtalk/digito-api:$GITHUB_REF
     steps:
       - uses: actions/checkout@v1
-      - name: Download built app
-        uses: actions/download-artifact@v1
+      - name: Set up Python ${{ matrix.python }}
+        uses: actions/setup-python@v1
         with:
-          name: api-env
-          path: digito-api/.env
+          python-version: ${{ matrix.python }}
+      - name: Build app
+        working-directory: digito-api
+        run: |
+          pip install --upgrade pip
+          pip install nose2
+          python -m venv --system-site-packages .env
+          source .env/bin/activate
+          pip install -I -r requirements.txt
+          python -m nose2
       - name: Docker Login
         uses: Azure/docker-login@v1
         with:
