Putting port 80 for gunicorn's bind in API

--- a/digito-api/Dockerfile
+++ b/digito-api/Dockerfile
@@ -9,4 +9,4 @@ ENV LOGGER_LEVEL=INFO
 ENV VERBOSE=0
 # ENV UI_LOCATION=depends on deployment
 # ENV LOGGER_FORMAT=see logconf.py
-CMD ["gunicorn", "--workers=2", "--threads=4", "--worker-class=gthread", "--log-file=-", "app:app"]
+CMD ["gunicorn", "--workers=2", "--threads=4", "--worker-class=gthread", "--log-file=-", "--bind=0.0.0.0:80", "app:app"]
