--- a/digito-api/deploy/ingress.yml
+++ b/digito-api/deploy/ingress.yml
@@ -6,10 +6,18 @@ metadata:
     app: digito
     type: api
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.org/rewrites: "serviceName=digito-api rewrite=/;"
+
 spec:
   rules:
     - host: digito2.jtalk.me
+      http:
+        paths:
+        - path: /api
+          backend:
+            serviceName: digito-api
+            servicePort: 80
+    - host: digito.jtalk.me
       http:
         paths:
         - path: /api
