--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -51,6 +51,38 @@ jobs:
         run: |
           docker tag "$DOCKER_IMAGE:$GITHUB_SHA" "$DOCKER_IMAGE:latest"
           docker push "$DOCKER_IMAGE:latest"
+  deploy:
+    name: Deploy to Kubernetes
+    runs-on: ubuntu-latest
+    needs: build-release
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Load Kubernetes config
+        uses: digitalocean/action-doctl@v1.6.0
+        env:
+          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DO_TOKEN }}
+        with:
+          args: kubernetes cluster kubeconfig show ${{ secrets.DO_K8S_CLUSTER_NAME }} > $GITHUB_WORKSPACE/.kubeconfig
+      - name: Deploy to Kubernetes
+        uses: Azure/k8s-deploy@v1
+        with:
+          namespace: digito
+          manifests: |
+            digito-api/deploy/deployment.yml
+            digito-api/deploy/service.yml
+            digito-api/deploy/ingress.yml
+  verify:
+    name: Verify deployment
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Verify the healthcheck URL
+        run: |
+          RESULT=$(curl http://digito2.jtalk.me/api/health)
+          [ "$RESULT" == "OK" ]
+    
+        
+        
         
         
         
