--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -57,18 +57,16 @@ jobs:
     needs: build-release
     if: github.ref == 'refs/heads/master'
     steps:
-      - name: Create Kubernetes config directory
-        run: mkdir $HOME/.kube
       - name: Load Kubernetes config
         uses: digitalocean/action-doctl@v1.6.0
         env:
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DO_TOKEN }}
         with:
-          args: kubernetes cluster kubeconfig show ${{ secrets.DO_K8S_CLUSTER_NAME }} > $HOME/.kube/config
-#       - name: Kubernetes set context
-#         uses: Azure/k8s-set-context@v1
-#         with:
-#           kubeconfig: .kubeconfig
+          args: kubernetes cluster kubeconfig show ${{ secrets.DO_K8S_CLUSTER_NAME }} > $GITHUB_WORKSPACE/.kubeconfig
+      - name: Move Kubernetes config to the right place (because DO's action is crap)
+        run: |
+          mkdir $HOME/.kube
+          mv $GITHUB_WORKSPACE/.kubeconfig $HOME/.kube/config
       - name: Deploy to Kubernetes
         uses: Azure/k8s-deploy@v1
         with:
