--- a/digito-api/deploy/deployment.yml
+++ b/digito-api/deploy/deployment.yml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: digito-api
-          image: jtalk/digito-api:latest
+          image: jtalk/digito-api:[[IMAGE_TAG]]
           ports:
             - containerPort: 80
           envFrom:
