--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,6 +2,10 @@ name: Digito UI
 
 on: [push]
 
+env:
+  DOCKER_IMAGE: jtalk/digito-ui
+  DOCKER_REVISION_TAG: jtalk/digito-ui:${{ github.sha }}
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,10 +34,6 @@ jobs:
   release-docker:
     runs-on: ubuntu-latest
     needs: build
-    env:
-      DOCKER_IMAGE: jtalk/digito-ui
-      DOCKER_BUILD_TAG: jtalk/digito-ui
-      DOCKER_REF_TAG: jtalk/digito-ui:$GITHUB_REF
     steps:
       - uses: actions/checkout@v1
       - name: Download built app
@@ -49,22 +49,56 @@ jobs:
       - name: Build docker image
         working-directory: digito-ui
         run: |
-          docker build -t "$DOCKER_IMAGE:$GITHUB_SHA" .
+          docker build -t "$DOCKER_REVISION_TAG" .
       - name: Push current artefact
         run: |
-          docker push $DOCKER_BUILD_TAG
+          docker push $DOCKER_REVISION_TAG
       - name: Push branch artefact
         if: github.ref != null
         run: |
           export BRANCH_NAME="${GITHUB_REF#refs/heads/}"
-          docker tag "$DOCKER_IMAGE:$GITHUB_SHA" "$DOCKER_IMAGE:$BRANCH_NAME"
+          docker tag "$DOCKER_REVISION_TAG" "$DOCKER_IMAGE:$BRANCH_NAME"
           docker push "$DOCKER_IMAGE:$BRANCH_NAME"
       - name: Push as current
         if: github.ref == 'refs/heads/master'
         run: |
-          docker tag "$DOCKER_IMAGE:$GITHUB_SHA" "$DOCKER_IMAGE:latest"
+          docker tag "$DOCKER_REVISION_TAG" "$DOCKER_IMAGE:latest"
           docker push "$DOCKER_IMAGE:latest"
-        
+  deploy:
+    name: Deploy to Kubernetes
+    runs-on: ubuntu-latest
+    needs: release-docker
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v1
+      - name: Load Kubernetes config
+        env:
+          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DO_TOKEN }}
+        run: |
+          mkdir $HOME/.kube
+          docker run --rm \
+            -e "DIGITALOCEAN_ACCESS_TOKEN=$DIGITALOCEAN_ACCESS_TOKEN" \
+            digitalocean/doctl kubernetes cluster kubeconfig show ${{ secrets.DO_K8S_CLUSTER_NAME }} \
+            > $HOME/.kube/config
+      - name: Deploy to Kubernetes
+        working-directory: digito-ui/deploy
+        run: |
+            # Good ol' kubernetes, still unable to figure image tags out on its own in 2019...
+            # Also all this [[][[][]][[][]] is because Sed is kind of a retard when it comes to brackets.
+            sed -i -- 's/[[][[]IMAGE_TAG[]][]]/${{ github.sha }}/' deployment.yml
+            # It's faster to deploy manually than to be figuring out all the Azure k8s-deploy's
+            # idiosyncrasies one by one tbh.
+            kubectl -n digito apply -f deployment.yml
+            kubectl -n digito apply -f service.yml
+            kubectl -n digito apply -f ingress.yml
+  verify:
+    name: Verify deployment
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Verify the healthcheck URL
+        run: |
+          curl --fail http://digito2.jtalk.me/
         
 
 
