--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,7 +7,8 @@ env:
   DOCKER_REVISION_TAG: jtalk/digito-ui:${{ github.sha }}
   
 jobs:
-  build:
+  build-release:
+    name: Build and Release to Docker
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,48 +27,33 @@ jobs:
         npm ci
         npm run build
         npm test src/
-    - name: Upload UI build
-      uses: actions/upload-artifact@v1
+    - name: Docker Login
+      uses: Azure/docker-login@v1
       with:
-        name: ui-build
-        path: digito-ui/build
-  release-docker:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v1
-      - name: Download built app
-        uses: actions/download-artifact@v1
-        with:
-          name: ui-build
-          path: digito-ui/build
-      - name: Docker Login
-        uses: Azure/docker-login@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build docker image
-        working-directory: digito-ui
-        run: |
-          docker build -t "$DOCKER_REVISION_TAG" .
-      - name: Push current artefact
-        run: |
-          docker push $DOCKER_REVISION_TAG
-      - name: Push branch artefact
-        if: github.ref != null
-        run: |
-          export BRANCH_NAME="${GITHUB_REF#refs/heads/}"
-          docker tag "$DOCKER_REVISION_TAG" "$DOCKER_IMAGE:$BRANCH_NAME"
-          docker push "$DOCKER_IMAGE:$BRANCH_NAME"
-      - name: Push as current
-        if: github.ref == 'refs/heads/master'
-        run: |
-          docker tag "$DOCKER_REVISION_TAG" "$DOCKER_IMAGE:latest"
-          docker push "$DOCKER_IMAGE:latest"
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build docker image
+      working-directory: digito-ui
+      run: |
+        docker build -t "$DOCKER_REVISION_TAG" .
+    - name: Push current artefact
+      run: |
+        docker push $DOCKER_REVISION_TAG
+    - name: Push branch artefact
+      if: github.ref != null
+      run: |
+        export BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+        docker tag "$DOCKER_REVISION_TAG" "$DOCKER_IMAGE:$BRANCH_NAME"
+        docker push "$DOCKER_IMAGE:$BRANCH_NAME"
+    - name: Push as current
+      if: github.ref == 'refs/heads/master'
+      run: |
+        docker tag "$DOCKER_REVISION_TAG" "$DOCKER_IMAGE:latest"
+        docker push "$DOCKER_IMAGE:latest"
   deploy:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
-    needs: release-docker
+    needs: build-release
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v1
