--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -79,7 +79,7 @@ jobs:
             kubectl -n digito apply -f service.yml
             kubectl -n digito apply -f ingress.yml
             # Waiting for the rollout
-            kubectl rollout status -w --timeout=1m -f deploy/deployment.yml
+            kubectl rollout status -w --timeout=1m -f deployment.yml
   verify:
     name: Verify deployment
     runs-on: ubuntu-latest
