--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,6 +15,7 @@ jobs:
         node: [12.x]
     env:
       PUBLIC_URL: /app
+      NODE_ENV: production
     steps:
     - uses: actions/checkout@v1
     - name: Set up Node.JS ${{ env.NODE }}
