--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         node: [12.x]
     env:
-      PUBLIC_URL: /app
+      PUBLIC_URL: ''
       NODE_ENV: production
       REACT_APP_API_LOCATION: http://digito.jtalk.me/api/
     steps:
