--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,10 +21,9 @@ jobs:
         working-directory: digito-api
         run: |
           pip install --upgrade pip
-          pip install nose2
-          python -m venv --system-site-packages .env
+          python -m venv .env
           source .env/bin/activate
-          pip install -I -r requirements.txt
+          pip install -I -r requirements-dev.txt
           python -m nose2 tests
       - name: Docker Login
         uses: Azure/docker-login@v1
