--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       PUBLIC_URL: ''
       NODE_ENV: production
-      REACT_APP_API_LOCATION: http://digito.jtalk.me/api/
+      REACT_APP_API_LOCATION: /api
     steps:
     - uses: actions/checkout@v1
     - name: Set up Node.JS ${{ env.NODE_VERSION }}
