--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -88,7 +88,7 @@ jobs:
     steps:
       - name: Verify the healthcheck URL
         run: |
-          RESULT=$(curl http://digito2.jtalk.me/api/health)
+          RESULT=$(curl https://digito.jtalk.me/api/health)
           [ "$RESULT" == "OK" ]
     
         
