Don't use multithreading with gunicorn: it breaks tensorflow/keras

--- a/digito-api/Dockerfile
+++ b/digito-api/Dockerfile
@@ -7,6 +7,7 @@ COPY *.py ./
 RUN pip install -r requirements.txt
 ENV LOGGER_LEVEL=INFO
 ENV VERBOSE=0
+RUN pip freeze
 # ENV UI_LOCATION=depends on deployment
 # ENV LOGGER_FORMAT=see logconf.py
-CMD ["gunicorn", "--workers=2", "--threads=4", "--worker-class=gthread", "--log-file=-", "--bind=0.0.0.0:80", "app:app"]
+CMD ["gunicorn", "--workers=4", "--threads=1", "--worker-class=gthread", "--log-file=-", "--bind=0.0.0.0:80", "app:app"]
