--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -89,7 +89,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     env:
-      APP_HOSTNAME: https://digito.jtalk.me
+      API_URL: https://digito.jtalk.me/api
     steps:
       - uses: actions/checkout@v1
       - name: Set up Python ${{ env.PYTHON_VERSION }}
