--- a/digito-api/deploy/ingress.yml
+++ b/digito-api/deploy/ingress.yml
@@ -5,9 +5,15 @@ metadata:
   labels:
     app: digito-api
   annotations:
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 
 spec:
+  tls:
+    - hosts:
+      - digito.jtalk.me
+      secretName: digito-certificate
   rules:
     - host: digito.jtalk.me
       http:
