--- a/digito-api/deploy/deployment.yml
+++ b/digito-api/deploy/deployment.yml
@@ -36,10 +36,10 @@ spec:
           resources:
             limits:
               cpu: 400m
-              memory: 500M
+              memory: 1G
             requests:
               cpu: 50m
-              memory: 100M
+              memory: 900M
           startupProbe:
             periodSeconds: 10
             failureThreshold: 6
@@ -48,7 +48,7 @@ spec:
               port: 80
           livenessProbe:
             failureThreshold: 1
-            timeoutSeconds: 10
+            timeoutSeconds: 5
             httpGet: 
               path: /health
               port: 80
