--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -6,6 +6,8 @@ env:
   DOCKER_IMAGE: jtalk/digito-ui
   DOCKER_REVISION_TAG: jtalk/digito-ui:${{ github.sha }}
   NODE_VERSION: 12.x
+  NODE_ENV: production
+  CI: true
   
 jobs:
   build-release:
@@ -24,41 +26,26 @@ jobs:
     - name: Test UI
       working-directory: digito-ui
       env:
-        CI: true
         NODE_ENV: development
       run: |
         npm ci
         npm test src/
     - name: Build UI
       working-directory: digito-ui
-      env:
-        CI: true
       run: |
         npm ci
         npm run build
-    - name: Docker Login
-      uses: Azure/docker-login@v1
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v1.0.1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Build docker image
-      working-directory: digito-ui
-      run: |
-        docker build -t "$DOCKER_REVISION_TAG" .
-    - name: Push current artefact
-      run: |
-        docker push $DOCKER_REVISION_TAG
-    - name: Push branch artefact
-      if: github.ref != null
-      run: |
-        export BRANCH_NAME="${GITHUB_REF#refs/heads/}"
-        docker tag "$DOCKER_REVISION_TAG" "$DOCKER_IMAGE:$BRANCH_NAME"
-        docker push "$DOCKER_IMAGE:$BRANCH_NAME"
-    - name: Push as current
-      if: github.ref == 'refs/heads/master'
-      run: |
-        docker tag "$DOCKER_REVISION_TAG" "$DOCKER_IMAGE:latest"
-        docker push "$DOCKER_IMAGE:latest"
+        path: digito-ui
+        repository: ${{ env.UI_DOCKER_IMAGE_PREFIX }}
+        tags: ${{ github.sha }}
+        tag_with_ref: true
+        tag_with_sha: false
+        push: true
   deploy:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
@@ -68,30 +55,21 @@ jobs:
       KUBE_NS: digito
     steps:
       - uses: actions/checkout@v1
-      - name: Load Kubernetes config
-        env:
-          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DO_TOKEN }}
-        run: |
-          mkdir $HOME/.kube
-          docker run --rm \
-            -e "DIGITALOCEAN_ACCESS_TOKEN=$DIGITALOCEAN_ACCESS_TOKEN" \
-            digitalocean/doctl kubernetes cluster kubeconfig show ${{ secrets.DO_K8S_CLUSTER_NAME }} \
-            > $HOME/.kube/config
+      - name: Authenticate with the cluster
+        uses: Azure/k8s-set-context@v1
+        with:
+          method: service-account
+          k8s-url: ${{ secrets.CLUSTER_URL }}
+          k8s-secret: ${{ secrets.CLUSTER_ACCOUNT_SECRET }}
       - name: Deploy to Kubernetes
-        working-directory: digito-ui/deploy
-        run: |
-            # Good ol' kubernetes, still unable to figure image tags out on its own in 2019...
-            # Also all this [[][[][]][[][]] is because Sed is kind of a retard when it comes to brackets.
-            sed -i -- 's/[[][[]IMAGE_TAG[]][]]/${{ github.sha }}/' deployment.yml
-            # Fix namespace
-            kubectl config set-context --current --namespace=$KUBE_NS
-            # It's faster to deploy manually than to be figuring out all the Azure k8s-deploy's
-            # idiosyncrasies one by one tbh.
-            kubectl apply -f deployment.yml
-            kubectl apply -f service.yml
-            kubectl apply -f ingress.yml
-            # Waiting for the rollout
-            kubectl rollout status -w --timeout=1m -f deployment.yml
+        uses: jtalk/k8s-deploy@v2
+        with:
+          namespace: home-staging
+          manifests: |
+            digito-ui/deploy/deployment.yaml
+            digito-ui/deploy/service.yaml
+            digito-ui/deploy/ingress.yaml
+          images: ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
   verify:
     name: Verify deployment
     runs-on: ubuntu-latest
