--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,7 +40,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         path: digito-ui
-        repository: ${{ env.UI_DOCKER_IMAGE_PREFIX }}
+        repository: ${{ env.DOCKER_IMAGE }}
         tags: ${{ github.sha }}
         tag_with_ref: true
         tag_with_sha: false
