--- a/digito-api/deploy/ingress.yml
+++ b/digito-api/deploy/ingress.yml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: digito-api
@@ -19,6 +19,9 @@ spec:
       http:
         paths:
         - path: /api(/|$)(.*)
+          pathType: ImplementationSpecific
           backend:
-            serviceName: digito-api
-            servicePort: 80
+            service:
+              name: digito-api
+              port:
+                number: 80
